tests/baselines/reference/tsxElementResolution1.errors.txt
file.tsx(12,1): error TS2339: Property 'span' does not exist on type 'JSX.IntrinsicElements'.


==== file.tsx (1 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		div: any
    	}
    }
    
    // OK
    <div />;
    
    // Fail
    <span />;
    ~~~~~~~~
!!! error TS2339: Property 'span' does not exist on type 'JSX.IntrinsicElements'.